scrollbar fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,6 +61,7 @@ a {
 /* Application (always displayed) */
 html {
   background: #2337AD;
+  overflow-y: scroll;
 }
 
 a:link {
